toolchain: cleanup fabric resolvers