@@ -4,7 +4,6 @@ import dev.pswg.toolchain.intellij.IntelliJDependencyResolver;
 import dev.pswg.toolchain.intellij.IntelliJModuleNames;
 import dev.pswg.toolchain.intellij.IntelliJRunConfigurationSupport;
 import dev.pswg.toolchain.intellij.IntelliJXmlWriter;
-import dev.pswg.toolchain.mojang.MojangPaths;
 import dev.pswg.toolchain.model.BuildGraph;
 import dev.pswg.toolchain.model.MavenDependencySpec;
 import dev.pswg.toolchain.model.ModuleAggregationResolver;
@@ -19,14 +18,12 @@ import dev.pswg.toolchain.runtime.VanillaLaunchService;
 import dev.pswg.toolchain.template.FileTemplateRenderer;
 import dev.pswg.toolchain.template.XmlEscaper;
 import dev.pswg.toolchain.util.HostPlatform;
-import dev.pswg.toolchain.util.ToolchainLog;
 
 import com.fasterxml.jackson.databind.ObjectMapper;
 
 import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.StandardCopyOption;
 import java.util.ArrayList;
 import java.util.LinkedHashMap;
 import java.util.LinkedHashSet;
@@ -64,11 +61,6 @@ public final class FabricDevLaunchService
 	 * Whether ANSI logging is enabled in generated development launches.
 	 */
 	public static final boolean DEFAULT_ANSI_LOGGING_ENABLED = true;
-
-	/**
-	 * The IntelliJ output directory segment used for compiled module outputs.
-	 */
-	public static final String INTELLIJ_OUTPUT_DIRECTORY = "out/production";
 
 	/**
 	 * The shared JSON serializer.
@@ -145,7 +137,7 @@ public final class FabricDevLaunchService
 			identity
 		);
 
-		writeLaunchJson(launchPaths.serializedLaunchPath(), fabricLaunch);
+		FabricLaunchSupport.writeLaunchJson(_mapper, launchPaths.serializedLaunchPath(), fabricLaunch);
 		writeIdeaLaunchModule(
 			repository,
 			moduleInjection,
@@ -322,10 +314,10 @@ public final class FabricDevLaunchService
 	{
 		Files.createDirectories(launchPaths.configDirectory());
 		Files.createDirectories(launchPaths.instanceRoot());
-		writeLoggingConfig(vanillaLaunch, launchPaths.loggingConfigPath());
+		FabricLaunchSupport.writeLoggingConfig(vanillaLaunch, launchPaths.loggingConfigPath());
 		if (environment.isClient())
 		{
-			prepareFabricAssetIndex(versionId, vanillaLaunch.assetIndexId());
+			FabricLaunchSupport.prepareFabricAssetIndex(versionId, vanillaLaunch.assetIndexId());
 		}
 		writeDevLaunchConfig(
 			versionId,
@@ -355,46 +347,18 @@ public final class FabricDevLaunchService
 	)
 	{
 		List<String> jvmArgs = new ArrayList<>(vanillaLaunch.jvmArgs());
-		List<Path> prependedClasspath = buildPrependedClasspath(moduleInjection, runtimeArtifacts);
-		replaceClasspath(jvmArgs, prependedClasspath);
-		replaceLoggingConfiguration(jvmArgs, launchPaths.loggingConfigPath());
+		List<Path> prependedClasspath = FabricLaunchSupport.buildPrependedClasspath(
+			moduleInjection.moduleRoots(),
+			moduleInjection.dependencyRoots(),
+			moduleInjection.externalRuntimeArtifacts(),
+			runtimeArtifacts.classpath()
+		);
+		FabricLaunchSupport.replaceClasspath(jvmArgs, prependedClasspath);
+		FabricLaunchSupport.replaceLoggingConfiguration(jvmArgs, launchPaths.loggingConfigPath(), DEFAULT_ANSI_LOGGING_ENABLED);
 		addFabricRuntimeProperties(jvmArgs, runtimeArtifacts, launchPaths, environment);
-		addHostCompatibilityFlags(jvmArgs);
-		addMixinJavaAgent(jvmArgs, runtimeArtifacts);
+		FabricLaunchSupport.addHostCompatibilityFlags(jvmArgs);
+		FabricLaunchSupport.addMixinJavaAgent(jvmArgs, runtimeArtifacts);
 		return jvmArgs;
-	}
-
-	/**
-	 * Builds the classpath entries that must appear ahead of the vanilla runtime.
-	 *
-	 * @param moduleInjection the resolved module injection contract
-	 * @param runtimeArtifacts the resolved Fabric runtime artifacts
-	 * @return the ordered prepended classpath entries
-	 */
-	private List<Path> buildPrependedClasspath(
-		FabricModuleInjection moduleInjection,
-		FabricRuntimeArtifacts runtimeArtifacts
-	)
-	{
-		List<Path> prependedClasspath = new ArrayList<>(moduleInjection.moduleRoots());
-		prependedClasspath.addAll(moduleInjection.dependencyRoots());
-		prependedClasspath.addAll(moduleInjection.externalRuntimeArtifacts());
-		prependedClasspath.addAll(runtimeArtifacts.classpath());
-		return prependedClasspath;
-	}
-
-	/**
-	 * Replaces the logging configuration path inherited from the vanilla baseline.
-	 *
-	 * @param jvmArgs the JVM argument list
-	 * @param loggingConfigPath the generated Fabric logging configuration path
-	 */
-	private void replaceLoggingConfiguration(List<String> jvmArgs, Path loggingConfigPath)
-	{
-		jvmArgs.removeIf(argument -> argument.startsWith("-Dlog4j.configurationFile="));
-		jvmArgs.add("-Dlog4j.configurationFile=" + loggingConfigPath.toAbsolutePath());
-		jvmArgs.add("-Dlog4j2.formatMsgNoLookups=true");
-		jvmArgs.add("-Dfabric.log.disableAnsi=" + !DEFAULT_ANSI_LOGGING_ENABLED);
 	}
 
 	/**
@@ -415,31 +379,6 @@ public final class FabricDevLaunchService
 		jvmArgs.add("-Dfabric.dli.env=" + environment.id());
 		jvmArgs.add("-Dfabric.dli.main=" + runtimeArtifacts.runtimeMainClass());
 		jvmArgs.add("-Dfabric.development=true");
-	}
-
-	/**
-	 * Adds conservative JVM compatibility flags used by modern Minecraft launches.
-	 *
-	 * @param jvmArgs the JVM argument list
-	 */
-	private void addHostCompatibilityFlags(List<String> jvmArgs)
-	{
-		addIfMissing(jvmArgs, "--sun-misc-unsafe-memory-access=allow");
-		addIfMissing(jvmArgs, "--enable-native-access=ALL-UNNAMED");
-	}
-
-	/**
-	 * Adds the optional Mixin javaagent when the resolved runtime requires it.
-	 *
-	 * @param jvmArgs the JVM argument list
-	 * @param runtimeArtifacts the resolved Fabric runtime artifacts
-	 */
-	private void addMixinJavaAgent(List<String> jvmArgs, FabricRuntimeArtifacts runtimeArtifacts)
-	{
-		if (runtimeArtifacts.mixinJavaAgentJar() != null)
-		{
-			addIfMissing(jvmArgs, "-javaagent:" + runtimeArtifacts.mixinJavaAgentJar().toAbsolutePath());
-		}
 	}
 
 	/**
@@ -478,72 +417,6 @@ public final class FabricDevLaunchService
 	}
 
 	/**
-	 * Creates the Fabric-style asset index alias expected by the dev launcher.
-	 *
-	 * @param versionId the Minecraft version identifier
-	 * @param assetIndexId the Mojang asset index identifier
-	 * @throws IOException if the alias cannot be created
-	 */
-	private void prepareFabricAssetIndex(String versionId, String assetIndexId) throws IOException
-	{
-		MojangPaths paths = new MojangPaths();
-		Path source = paths.assetIndexFile(assetIndexId);
-		Path target = paths.assetIndexFile(versionId + "-" + assetIndexId);
-
-		Files.createDirectories(target.getParent());
-		Files.copy(source, target, StandardCopyOption.REPLACE_EXISTING);
-	}
-
-	/**
-	 * Replaces the existing launch classpath with a Fabric-prepended classpath.
-	 *
-	 * @param jvmArgs the JVM argument list to update
-	 * @param prependedClasspath the classpath entries to prepend
-	 */
-	private void replaceClasspath(List<String> jvmArgs, List<Path> prependedClasspath)
-	{
-		String separator = System.getProperty("path.separator");
-		String prependedValue = prependedClasspath.stream()
-		                                         .map(path -> path.toAbsolutePath().toString())
-		                                         .reduce((left, right) -> left + separator + right)
-		                                         .orElse("");
-
-		for (int i = 0; i < jvmArgs.size() - 1; i++)
-		{
-			String arg = jvmArgs.get(i);
-
-			if (!"-cp".equals(arg) && !"-classpath".equals(arg))
-			{
-				continue;
-			}
-
-			String existingClasspath = jvmArgs.get(i + 1);
-			jvmArgs.set(i + 1, prependedValue + separator + existingClasspath);
-			return;
-		}
-
-		if (!prependedValue.isBlank())
-		{
-			jvmArgs.add("-cp");
-			jvmArgs.add(prependedValue);
-		}
-	}
-
-	/**
-	 * Adds a JVM argument if it is not already present.
-	 *
-	 * @param arguments the JVM argument list
-	 * @param argument the argument to add
-	 */
-	private void addIfMissing(List<String> arguments, String argument)
-	{
-		if (!arguments.contains(argument))
-		{
-			arguments.add(argument);
-		}
-	}
-
-	/**
 	 * Writes the Fabric-style development launcher configuration file.
 	 *
 	 * @param versionId the Minecraft version identifier
@@ -566,8 +439,8 @@ public final class FabricDevLaunchService
 		values.put("LOG4J_CONFIGURATION_FILE", loggingConfigPath.toAbsolutePath().toString());
 		values.put("FABRIC_DEFAULT_MOD_DISTRIBUTION_NAMESPACE", DEFAULT_MOD_DISTRIBUTION_NAMESPACE);
 		values.put("FABRIC_DEFAULT_MIXIN_REMAP_TYPE", DEFAULT_MIXIN_REMAP_TYPE);
-		values.put("OPTIONAL_COMMON_PROPERTIES", optionalCommonProperties(moduleRoots));
-		values.put("OPTIONAL_ENVIRONMENT_COMMON_PROPERTIES", environmentCommonProperties(versionId));
+		values.put("OPTIONAL_COMMON_PROPERTIES", FabricLaunchSupport.optionalCommonProperties(moduleRoots));
+		values.put("OPTIONAL_ENVIRONMENT_COMMON_PROPERTIES", FabricLaunchSupport.environmentCommonProperties(versionId));
 		values.put("OPTIONAL_ENVIRONMENT_PROPERTIES_SECTION", environmentPropertiesSection(versionId, environment));
 		values.put("ENVIRONMENT_ARGS_SECTION", environmentArgsSection(versionId, vanillaLaunch, environment));
 		String rendered = FileTemplateRenderer.render(
@@ -577,51 +450,6 @@ public final class FabricDevLaunchService
 
 		Files.createDirectories(outputPath.getParent());
 		Files.writeString(outputPath, rendered);
-	}
-
-	/**
-	 * Renders optional shared Fabric launcher properties for injected grouped module roots.
-	 *
-	 * @param moduleRoots the injected module classpath roots
-	 * @return the rendered optional property lines, each ending in a newline
-	 */
-	private String optionalCommonProperties(List<Path> moduleRoots)
-	{
-		if (moduleRoots.size() < 2)
-		{
-			return "";
-		}
-
-		String joinedRoots = moduleRoots.stream()
-		                               .map(path -> path.toAbsolutePath().toString())
-		                               .reduce((left, right) -> left + System.getProperty("path.separator") + right)
-		                               .orElse("");
-
-		if (joinedRoots.isBlank())
-		{
-			return "";
-		}
-
-		// Fabric groups split class/resource roots into a single logical mod using pathSeparator-delimited entries.
-		return "\tfabric.classPathGroups=" + joinedRoots + "\n";
-	}
-
-	/**
-	 * Renders Loom-style common game-jar properties for split source-set launches.
-	 *
-	 * <p>Fabric's game provider expects `fabric.gameJarPath` to point at the common/server-side jar
-	 * when development launches split common and client compilation inputs. Without it, server
-	 * launches can fail to locate the game even when the classpath already contains the extracted
-	 * server jar.
-	 *
-	 * @param versionId the Minecraft version identifier
-	 * @return the rendered common property lines, each ending in a newline
-	 */
-	private String environmentCommonProperties(String versionId)
-	{
-		MojangPaths paths = new MojangPaths();
-		Path commonGameJar = paths.extractedServerJarFile(versionId);
-		return "\tfabric.gameJarPath=" + commonGameJar.toAbsolutePath() + "\n";
 	}
 
 	/**
@@ -644,10 +472,7 @@ public final class FabricDevLaunchService
 			return "";
 		}
 
-		MojangPaths paths = new MojangPaths();
-		Path clientGameJar = paths.clientJarFile(versionId);
-		return "clientProperties\n"
-			+ "\tfabric.gameJarPath.client=" + clientGameJar.toAbsolutePath() + "\n";
+		return FabricLaunchSupport.clientPropertiesSection(versionId);
 	}
 
 	/**
@@ -669,11 +494,7 @@ public final class FabricDevLaunchService
 			return "";
 		}
 
-		return "clientArgs\n"
-			+ "\t--assetIndex\n"
-			+ "\t" + versionId + "-" + vanillaLaunch.assetIndexId() + "\n"
-			+ "\t--assetsDir\n"
-			+ "\t" + vanillaLaunch.assetsRoot().toAbsolutePath() + "\n";
+		return FabricLaunchSupport.clientArgsSection(versionId, vanillaLaunch);
 	}
 
 	/**
@@ -691,19 +512,7 @@ public final class FabricDevLaunchService
 		boolean refresh
 	) throws IOException
 	{
-		List<Path> artifacts = new ArrayList<>();
-
-		for (MavenDependencySpec runtimeDependency : runtimeDependencies)
-		{
-			Path artifact = _runtimeResolver.resolveRuntimeDependency(runtimeDependency, gradleProperties, refresh);
-
-			if (!artifacts.contains(artifact))
-			{
-				artifacts.add(artifact);
-			}
-		}
-
-		return artifacts;
+		return FabricLaunchSupport.resolveRuntimeDependencies(_runtimeResolver, runtimeDependencies, gradleProperties, refresh);
 	}
 
 	/**
@@ -772,84 +581,14 @@ public final class FabricDevLaunchService
 		LaunchEnvironment environment
 	)
 	{
-		List<Path> roots = new ArrayList<>();
-		roots.addAll(resolveSourceSetOutputRoots(projectRoot, projectName, module, SourceSetNames.MAIN));
-
-		if (environment.isClient())
-		{
-			roots.addAll(resolveSourceSetOutputRoots(projectRoot, projectName, module, SourceSetNames.CLIENT));
-		}
-
-		return roots.stream()
-		            .distinct()
-		            .toList();
-	}
-
-	/**
-	 * Resolves the IntelliJ output root for a single module source set.
-	 *
-	 * @param projectRoot the tracked repository root
-	 * @param module the module specification
-	 * @param sourceSetName the source set name
-	 * @return the ordered output roots
-	 */
-	private List<Path> resolveSourceSetOutputRoots(
-		Path projectRoot,
-		String projectName,
-		ModuleSpec module,
-		String sourceSetName
-	)
-	{
-		String moduleName = IntelliJModuleNames.sourceSetModuleName(projectName, module.id(), sourceSetName);
-		Path intellijOutput = projectRoot.resolve(INTELLIJ_OUTPUT_DIRECTORY).resolve(moduleName);
-
-		if (Files.isDirectory(intellijOutput))
-		{
-			ToolchainLog.info("fabric", "Using IntelliJ output for " + module.id() + "." + sourceSetName + ": " + intellijOutput);
-			return List.of(intellijOutput);
-		}
-
-		ToolchainLog.info(
+		return FabricModuleOutputResolver.resolveOutputRoots(
+			projectRoot,
+			projectName,
+			module,
+			environment.isClient(),
 			"fabric",
-			"No IntelliJ output found for " + module.id() + "." + sourceSetName + ". Build the generated Fabric development configuration in IntelliJ first."
+			true
 		);
-		return List.of();
-	}
-
-	/**
-	 * Writes the Loom-style IntelliJ log4j configuration for the Fabric launch bundle.
-	 *
-	 * @param vanillaLaunch the prepared vanilla launch configuration
-	 * @param outputPath the target configuration path
-	 * @throws IOException if the file cannot be written
-	 */
-	private void writeLoggingConfig(VanillaLaunchConfig vanillaLaunch, Path outputPath) throws IOException
-	{
-		Map<String, String> values = new LinkedHashMap<>();
-		values.put("LATEST_LOG", IntelliJRunConfigurationSupport.xmlPath(vanillaLaunch.gameDirectory().resolve("logs").resolve("latest.log")));
-		values.put("ARCHIVED_LOGS", IntelliJRunConfigurationSupport.xmlPath(vanillaLaunch.gameDirectory().resolve("logs").resolve("%d{yyyy-MM-dd}-%i.log.gz")));
-		values.put("DEBUG_LOG", IntelliJRunConfigurationSupport.xmlPath(vanillaLaunch.gameDirectory().resolve("logs").resolve("debug.log")));
-		values.put("DEBUG_ARCHIVED_LOGS", IntelliJRunConfigurationSupport.xmlPath(vanillaLaunch.gameDirectory().resolve("logs").resolve("debug-%i.log.gz")));
-		String rendered = FileTemplateRenderer.render(
-			"dev/pswg/toolchain/templates/log4j2-intellij.xml",
-			values
-		);
-
-		Files.createDirectories(outputPath.getParent());
-		Files.writeString(outputPath, rendered);
-	}
-
-	/**
-	 * Writes the serialized bootstrap launch JSON.
-	 *
-	 * @param outputPath the target launch JSON path
-	 * @param config the launch configuration
-	 * @throws IOException if the file cannot be written
-	 */
-	private void writeLaunchJson(Path outputPath, VanillaLaunchConfig config) throws IOException
-	{
-		Files.createDirectories(outputPath.getParent());
-		_mapper.writerWithDefaultPrettyPrinter().writeValue(outputPath.toFile(), config);
 	}
 
 	/**
